# crashbike

./: .gitignore  README.md  bikedata.ini  crashbike.cabal  stack.yaml  standardbike.ini  stationary_balancing.ini
src/: .#Main.hs  .#Optimise.hs  BikeState.hs  Main.hs  MakeStartState.hs  Optimise.hs  State2Picture.hs  Stepper.hs
