name:                crashbike
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/crashbike#readme
license:             GPL-3
license-file:        LICENSE
author:              True Ghiassi
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable crashbike
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss, ini, text, data-default, hmatrix, random, hmatrix-gsl
  other-modules:       BikeState, State2Picture
